Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-5317

netstd compiler does not escape keywords

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.13.0
    • 0.14.0
    • netstd - Compiler
    • None

    Description

      When compiling a thrift file with keyword 'event' and content:

      struct Departures

      { [...] 4:required StopEventParam event, // Options [...] }

      it is compiled without escaping:

      public Departures([...], StopEventParam event, [...]) : this()

      { [...] this.Event = event; [...] }

      same with keyword 'params'

      struct Departures

      { [...] 4:required StopEventParam params, // Options [...] }

      it is compiled without escaping:

      public Departures([...], StopEventParam params, [...]) : this()

      { [...] this.Event = params; [...] }

      The expected behaviour would be similiar to the csharp generator the escaping with an '@'

      for example:

      @params

       

      Attachments

        1. test.thrift
          0.3 kB
          Jens Geyer
        2. 0001-THRIFT-5317-netstd-compiler-does-not-escape-keywords.patch
          2 kB
          Jens Geyer

        Activity

          People

            jensg Jens Geyer
            Leonhard87 Leonhard Schiele
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: