THRIFT-5317 netstd compiler does not escape keywords Client: netstd Patch: Jens Geyer